--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,15 @@
 [submodule "ObjectMapper"]
 	path = ObjectMapper
 	url = https://github.com/Hearst-DD/ObjectMapper.git
+[submodule "Alamofire"]
+	path = Alamofire
+	url = https://github.com/Alamofire/Alamofire.git
+[submodule "Result"]
+	path = Result
+	url = https://github.com/antitypical/Result.git
+[submodule "Moya"]
+	path = Moya
+	url = https://github.com/Moya/Moya.git
+[submodule "RxSwift"]
+	path = RxSwift
+	url = git@github.com:ReactiveX/RxSwift.git
